<resources>
    <string name="app_name">Produtor</string>
    <string name="nome_do_cliente">Nome do Cliente</string>
    <string name="data_do_pedido">data e hora</string>
    <string name="n_do_pedido">numero do pedido</string>
    <string name="total_texto">Total:</string>
    <string name="total_do_pedido">R$ valor</string>
    <string name="endereco">Endereço</string>
    <string name="item">Item</string>
    <string name="qtd">Qtd</string>
    <string name="valor">Valor</string>
    <string name="cancelar_pedido">Cancelar Pedido</string>
    <string name="aceitar_pedido">Aceitar Pedido</string>
    <string name="pedido_concluido">PEDIDO CONCLUÍDO</string>
    <string name="meus_pedidos">Meus Pedidos</string>


    <string name="hint_digite_seu_nome">Digite seu nome</string>
    <string name="hint_digite_novo_nome">Digite um novo nome</string>
    <string name="hint_digite_seu_email">Digite seu e-mail</string>
    <string name="hint_digite_novo_email">Digite um novo e-mail</string>
    <string name="hint_digite_seu_telefone">Digite seu telefone</string>
    <string name="hint_digite_novo_telefone">Digite um novo telefone</string>
    <string name="hint_digite_seu_cpf">Digite seu cpf</string>
    <string name="hint_digite_sua_senha">Digite sua senha</string>
    <string name="hint_nome_do_endereço">Ex: Minha Casa</string>
    <string name="hint_cep_do_endereço">Digite o cep</string>
    <string name="hint_digite_num_end">Digite o número</string>
    <string name="hint_rua">Rua</string>
    <string name="hint_digite_complemento">Digite o complemento</string>
    <string name="voltar">Voltar</string>
    <string name="infos">Informações</string>
    <string name="pedidos">Pedidos</string>
    <string name="perfil">Perfil</string>
    <string name="historico">Histórico</string>
    <string name="carrinho">Carrinho</string>
    <string name="inicio">Início</string>
    <string name="avançar">Avançar</string>
    <string name="novo_endereço">Novo Endereço</string>
    <string name="num_endereço">Número do Endereço</string>
    <string name="cep">CEP</string>
    <string name="complemento_end">Digite o complemento</string>
    <string name="rua">Rua</string>
    <string name="confirmação_do_pedido">Confirmação do Pedido</string>
    <string name="nome_do_produto">Produto</string>
    <string name="unidade_do_produto">Unidade</string>
    <string name="finalizar_pedido">FINALIZAR PEDIDO</string>
    <string name="status_pedido">STATUS</string>
    <string name="suporte">Contatar Suporte</string>
    <string name="pedido_enviado">Pedido Enviado</string>


    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="ainda_n_tem_conta">Ainda não tem uma conta?</string>
    <string name="ou_entre_com">Ou entre com :</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="usuario">Usuario</string>
    <string name="telefone">Telefone</string>
    <string name="confimar_senha">Confirmar senha</string>
    <string name="cpf">CPF</string>
    <string name="email_usuario">Email</string>
    <string name="senha_usuario">Senha</string>
    <string name="cpf_usuario">Cpf</string>
    <string name="sair">Sair</string>
    <string name="trocar_senha">Trocar Senha</string>
    <string name="adicionar_endereco">Adicionar Endereço</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="nome_de_usuario">Nome de Usuario</string>
    <string name="email_label">E-mail:</string>
    <string name="telefone_label">Telefone:</string>
    <string name="metodo_de_pagamentos">Método de Pagamento</string>
    <string name="cartao_debito_ou_credito">Cartão Débito ou Crédito</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="senha_email">Senha email</string>
    <string name="voltar_para_login">voltar para login</string>
    <string name="enviar_email">enviar_email</string>
    <string name="esqueci_minha_senha">esqueci minha senha</string>
    <string name="pedido_realizado">Pedido realizado!</string>
    <string name="pedido_recebido">Pedido Recebido</string>
    <string name="falar_com_vendedor">Falar com Vendedor</string>
    <string name="primeiro_acesso">PRIMEIRO ACESSO</string>
    <string name="login">LOGIN</string>
    <string name="ver_detalhes_do_pedido">VER DETALHES </string>
    <string name="numero_do_pedido">Numero do pedido</string>
    <string name="falar_com_Ovendedor">falar com vendedor</string>
    <string name="pedidorealizado">pedido realizado:</string>
    <string name="e_mail">email</string>
    <string name="endereco_de_entrega">Endereço de Entrega</string>
    <string name="nome">Nome</string>
    <string name="titulo">Titulo</string>
    <string name="adicionar">Adicionar</string>
    <string name="atualizar">Atualizar</string>
    <string name="telefone2">Telefone</string>
</resources>