<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="52dp"
        android:layout_height="57dp"
        android:contentDescription="voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <Button
        android:id="@+id/button3"
        android:layout_width="325dp"
        android:layout_height="49dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <LinearLayout
        android:layout_width="332dp"
        android:layout_height="444dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText2"
            android:layout_width="332dp"
            android:layout_height="48dp"
            android:hint="@string/hint_digite_seu_nome" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_digite_seu_telefone"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="90dp"
            android:layout_height="22dp"
            android:text="@string/cpf" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="334dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_digite_seu_cpf"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="331dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_digite_seu_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/editTextTextPassword01"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_digite_sua_senha"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/confimar_senha" />

        <EditText
            android:id="@+id/editTextTextPassword02"
            android:layout_width="331dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_digite_sua_senha"
            android:inputType="textPassword" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>